Change names and stuff

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nehara's Personal Page</title>
+  <title>Nara's Personal Page</title>
 </head>
 
 <body>
   <img src="pp.jpg" alt="Nehara Profile Picture"></img>
-  <h1>Nehara Gulce Demir</h1>
+  <h1>Nara</h1>
   <p>
     <em>Mechanical Engineer, <strong>Web Developer In Works</strong></em>
   </p>
@@ -18,12 +18,12 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li><strong>Middle East Technical University</strong><em>, Ankara/Turkey 2014-2016</em>
+    <li><strong>METU</strong><em>, 2014-2016</em>
       <ul>
         <li>Graduate Courses, Software Engineering</li>
       </ul>
     </li>
-    <li><strong><a href="https://w3.bilkent.edu.tr/bilkent/"><strong>Bilkent University</strong></a><em>, Ankara/Turkey 2010-2014</em>
+    <li><strong><a href="https://w3.bilkent.edu.tr/bilkent/"><strong>Bilkent University</strong></a><em>, 2010-2014</em>
         <ul>
           <li>BS, Mechanical Engineering</li>
         </ul>
@@ -48,7 +48,7 @@
             <td>Computing</td><td>❤</td>
           </tr>
           <tr>
-            <td>COding</td><td>💕</td>
+            <td>Coding</td><td>💕</td>
           </tr>
         </table>
       </td>
